# dir_embedder

./: Cargo.toml
src/: lib.rs
